<resources>
    <string name="app_name">Projeto SeriesManager</string>
    <string name="series_adicionadas">series adicionadas</string>
    <string name="adicionar_serie">Adicionar serie</string>
    <string name="nomeTvHint">Nome</string>
    <string name="anoLancamentoTvHint">Ano lançamento</string>
    <string name="emissoraTvHint">Emissora</string>
    <string name="generoTvHint">Genero</string>
    <string name="add_serie">Add serie</string>
    <string name="genero">Genero</string>
    <string name="emissora">Emissora</string>
    <string name="dateFormaHint">yyyy-mm-dd</string>
    <string name="anoLancamento">Ano Lançamento</string>
    <string name="serieName">Nome serie</string>
    <string name="adicionar_temporada">Adicionar Temporada</string>
    <string name="numero_sequencial">Numero Sequencial</string>
    <string name="adicionar_episodio">Adicionar episodio</string>
    <string name="nome_episodio">Nome Episodio</string>
    <string name="duracao_episodio">Duracao Episodio</string>
    <string name="visto">Visto</string>
    <string name="salvar_episodio">Salvar Episodio</string>
</resources>