<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SerieActivity">

    <TextView
        android:id="@+id/nomeTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/serieName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/serieName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeTv" />

    <TextView
        android:id="@+id/anoLancamentoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anoLancamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeEt" />

    <EditText
        android:id="@+id/anoLancamentoEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/dateFormaHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anoLancamentoTv" />

    <TextView
        android:id="@+id/emissoraTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/emissora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anoLancamentoEt" />

    <EditText
        android:id="@+id/emissoraEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/emissora"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emissoraTv" />

    <TextView
        android:id="@+id/generoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emissoraEt" />

    <Spinner
        android:id="@+id/generoSp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generoTv" />

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/add_serie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>