<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="5dp"
    tools:context=".TemporadaActivity">

    <TextView
        android:id="@+id/numeroSequencialEpisodioTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/numero_sequencial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numeroSequencialEpisodioEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialEpisodioTv" />

    <TextView
        android:id="@+id/anoLancamentoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anoLancamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialEpisodioEt" />

    <EditText
        android:id="@+id/anoLancamentoEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anoLancamentoTv" />

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_temporada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anoLancamentoEt" />

</androidx.constraintlayout.widget.ConstraintLayout>